using System;

public class ItemPresenter
{
    private ItemModel _itemModel;
    private ItemView _itemView;

    public ItemPresenter(ItemModel model, ItemView view)
    {
        _itemModel = model;
        _itemView = view;
    }

    public void Enable()
    {
        int level = _itemModel.Level;
        string itemType = _itemModel.Item;
        var properties = _itemModel.States;

        _itemView.UpdateInformation(level, itemType, properties);
    }

    public void Disable()
    {
        _itemView.ClearTable();
    }
}
